Keep new tests compatible with project Java level